Migrating from sqldiff.xml to liquibase.xml Removing the mechanishm typo to Mechanism Changes to the helloworld accept the permision No removing HelloWorldResponse.java for further reference Not removing Global property (helloworld.repeatNumber for future reference) Add Severity Working (most basic level of working not in accordance with UI decided in wiki , just fir *testing*) Removing unused helloworld code
git-svn-id: http://svn.openmrs.org/openmrs-modules/feedback/trunk@20329 5bac5841-c719-aa4e-b3fe-cce5062f897a

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -2,6 +2,6 @@ feedback.title=Feedback Module
 feedback.manage=Manage Hello World
 feedback.helloWorld=Hello World!
 feedback.view=View Hello World
-feedback.addResponse=Add Response
+feedback.addSeverity=Add Severity
 feedback.response=Response
-feedback.responses=Responses
+feedback.severities=Severities
