Added Predefined Subject saveOrUpdate and delete in DAO problem solved
git-svn-id: http://svn.openmrs.org/openmrs-modules/feedback/trunk@20408 5bac5841-c719-aa4e-b3fe-cce5062f897a

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -1,7 +1,9 @@
 feedback.title=Feedback Module
-feedback.manage=Manage Hello World
-feedback.helloWorld=Hello World!
-feedback.view=View Hello World
+feedback.manage=Manage Feedback Module
+feedback.view=View Feedback
 feedback.addSeverity=Add Severity
-feedback.response=Response
 feedback.severities=Severities
+feedback.addStatus=Add Status
+feedback.statuses=Statuses
+feedback.addPredefinedSubject=Add Predefined Subject
+feedback.predefinedsubjects=Predefined Subjects
