--- a/omod/src/main/resources/messages_es.properties
+++ b/omod/src/main/resources/messages_es.properties
@@ -1,3 +1,9 @@
-@MODULE_ID@.title=Hola Mundo Módulo
-@MODULE_ID@.manage=Maneje Hola Mundo
-@MODULE_ID@.helloWorld=Hola Mundo!
+feedback.title=M\u00f3dulo de votos
+feedback.manage=Administrar el M\u00f3dulo de votos
+feedback.view=Ver los votos
+feedback.addSeverity=A\u00f1adir gravedad
+feedback.severities=Niveles de gravedad
+feedback.addStatus=A\u00f1adir Estado
+feedback.statuses=Estados
+feedback.addPredefinedSubject=A\u00f1adir predefinidos Asunto
+feedback.predefinedsubjects=Temas predefinidos
