--- a/omod/src/main/resources/messages_fr.properties
+++ b/omod/src/main/resources/messages_fr.properties
@@ -1,3 +1,9 @@
-@MODULE_ID@.title=Bonjour Monde Module
-@MODULE_ID@.manage=Contrôlez Bonjour Monde
-@MODULE_ID@.helloWorld=Bonjour Monde!
+feedback.title=Feedback Module
+feedback.manage=G\u00e9rer les modules d'\u00e9valuation
+feedback.view=Afficher le feedback
+feedback.addSeverity=Ajouter gravit\u00e9
+feedback.severities=S\u00e9v\u00e9rit\u00e9s
+feedback.addStatus=Ajouter un statut
+feedback.statuses=Statuts
+feedback.addPredefinedSubject=Ajouter pr\u00e9d\u00e9finis Sujet
+feedback.predefinedsubjects=Sujets pr\u00e9d\u00e9finis
