UI according to the standard OpenMRS Interface and Initialization of submit feedback.

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -7,3 +7,10 @@ feedback.addStatus=Add Status
 feedback.statuses=Statuses
 feedback.addPredefinedSubject=Add Predefined Subject
 feedback.predefinedsubjects=Predefined Subjects
+feedback.subject = Subject
+feedback.severity = Severity Level
+feedback.feedback = Feedback Message Content
+feedback.pageContext = Page Context
+feedback.addFeedback = Submit Feedback
+feedback.attachment = Upload Attachment
+feedback.submit = Submit Feedback
