Refined UI , evenRow/oddRpw added for better clearity/Final Version for Demo on June 9.

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -5,8 +5,12 @@ feedback.addSeverity=Add Severity
 feedback.severities=Severities
 feedback.addStatus=Add Status
 feedback.statuses=Statuses
+feedback.status=Status
 feedback.addPredefinedSubject=Add Predefined Subject
 feedback.predefinedsubjects=Predefined Subjects
+feedback.feedbackId = Ticket No
+feedback.creator = Creator
+feedback.dateCreated = Date Submitted
 feedback.subject = Subject
 feedback.severity = Severity Level
 feedback.feedback = Feedback Message Content
@@ -14,3 +18,15 @@ feedback.pageContext = Page Context
 feedback.addFeedback = Submit Feedback
 feedback.attachment = Upload Attachment
 feedback.submit = Submit Feedback
+feedback.admin = Admin
+feedback.manageFeedback = Manage Feedback
+feedback.manageStatus = Status Management
+feedback.managePredefinedSubject = Predefined Subject Management
+feedback.manageSubject = Subject Management
+feedback.manageSeverity = Severity Management
+feedback.editStatus = Edit Status
+feedback.editPredefinedSubject = Edit Predefined Subject
+feedback.editSubject = Edit Subject
+feedback.editSeverity = Edit Severity
+feedback.index = Index
+feedback.predefinedSubject = Predefined Subject
