--- a/omod/src/main/resources/messages_es.properties
+++ b/omod/src/main/resources/messages_es.properties
@@ -7,3 +7,26 @@ feedback.addStatus=A\u00f1adir Estado
 feedback.statuses=Estados
 feedback.addPredefinedSubject=A\u00f1adir predefinidos Asunto
 feedback.predefinedsubjects=Temas predefinidos
+feedback.status=Condici\u00f3n Jur\u00eddica y Social
+feedback.feedbackId = Venta de entradas no
+feedback.creator = Creador
+feedback.dateCreated = Fecha de presentaci\u00f3n
+feedback.subject = Asunto
+feedback.severity = Nivel de gravedad
+feedback.feedback = De votos contenido de los mensajes
+feedback.pageContext = P\u00e1gina de contexto
+feedback.addFeedback = Enviar comentarios
+feedback.attachment = Subir Adjunto
+feedback.submit = Enviar comentarios
+feedback.admin = Admin
+feedback.manageFeedback = Administrar votos
+feedback.manageStatus = Estado de Gesti\u00f3n
+feedback.managePredefinedSubject = Sin perjuicio de gesti\u00f3n predefinidos
+feedback.manageSubject = Sin perjuicio de Gesti\u00f3n
+feedback.manageSeverity = La severidad de Gesti\u00f3n
+feedback.editStatus = Editar estado
+feedback.editPredefinedSubject = Editar predefinidos Asunto
+feedback.editSubject = Editar asunto
+feedback.editSeverity = Edici\u00f3n de gravedad
+feedback.index = \u00cdndice
+feedback.predefinedSubject = Asunto predefinidos
