All changes told here at : https://source.openmrs.org/cru/CR-MOD-177#CFR-7998 incorporated except few that will be available in next commit.

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -30,3 +30,4 @@ feedback.editSubject = Edit Subject
 feedback.editSeverity = Edit Severity
 feedback.index = Index
 feedback.predefinedSubject = Predefined Subject
+feedback.module = Feedback Module
