Removing few bugs adding new messages.
git-svn-id: http://svn.openmrs.org/openmrs-modules/feedback/trunk@20996 5bac5841-c719-aa4e-b3fe-cce5062f897a

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -31,3 +31,15 @@ feedback.editSeverity = Edit Severity
 feedback.index = Index
 feedback.predefinedSubject = Predefined Subject
 feedback.module = Feedback Module
+
+
+feedback.notification.predefinedSubject.added = Predefined Subject Added Successfully 
+feedback.notification.predefinedSubject.deleted = Predefined Subject Deleted Successfully 
+feedback.notification.predefinedSubject.saved = Predefined Subject Saved Successfully 
+
+feedback.notification.severity.added = Severity Added Successfully 
+feedback.notification.severity.deleted =  Severity Deleted Successfully 
+
+
+feedback.notification.status.added = Status Added Successfully 
+feedback.notification.status.delete = Status Deleted Successfully 
