Major Update covering almost all *minimal* features , renaming the portlets and extesnions according to the convention left, although a rough model is completed.
git-svn-id: http://svn.openmrs.org/openmrs-modules/feedback/trunk@21198 5bac5841-c719-aa4e-b3fe-cce5062f897a

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -43,3 +43,5 @@ feedback.notification.severity.deleted =  Severity Deleted Successfully
 
 feedback.notification.status.added = Status Added Successfully 
 feedback.notification.status.delete = Status Deleted Successfully 
+
+feedback.notification.feedback.save = Feedback Successfully Saved
