Done with https://source.openmrs.org/cru/CR-MOD-202#c4567 and now better checks while uploading.
git-svn-id: http://svn.openmrs.org/openmrs-modules/feedback/trunk@21475 5bac5841-c719-aa4e-b3fe-cce5062f897a

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -44,4 +44,5 @@ feedback.notification.severity.deleted =  Severity Deleted Successfully
 feedback.notification.status.added = Status Added Successfully 
 feedback.notification.status.delete = Status Deleted Successfully 
 
-feedback.notification.feedback.save = Feedback Successfully Saved
+feedback.notification.feedback.save = Feedback Submitted Successfully
+feedback.notification.feedback.error = Error while submitting Feedback, We don't accept file other then jpeg,jpg,png,gif and attached file cannot be of size > 3 MB .Please remove the error and resubmit.
