Few GUI changes
git-svn-id: http://svn.openmrs.org/openmrs-modules/feedback/trunk@22015 5bac5841-c719-aa4e-b3fe-cce5062f897a

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -14,7 +14,7 @@ feedback.dateCreated = Date Submitted
 feedback.subject = Subject
 feedback.severity = Severity Level
 feedback.feedback = Feedback Message Content
-feedback.pageContext = Page Context
+feedback.pageContext = Stack Trace
 feedback.addFeedback = Submit Feedback
 feedback.attachment = Upload Attachment
 feedback.submit = Submit Feedback
@@ -46,3 +46,22 @@ feedback.notification.status.delete = Status Deleted Successfully
 
 feedback.notification.feedback.save = Feedback Submitted Successfully
 feedback.notification.feedback.error = Error while submitting Feedback, We don't accept file other then jpeg,jpg,png,gif and attached file cannot be of size > 3 MB .Please remove the error and resubmit.
+
+feedback.severity.help.heading = Feedback Module Help for Severity
+feedback.severity.help.l1 = The severity level indicates the seriousness of the problem.
+feedback.severity.help.l2 = You can have multiple severity level under which a user can submit a bug/feedback/report like Low , High , Normal , Generic , May be etc.
+feedback.severity.help.l3 = For a single feedback a user can select only a single severity level
+feedback.severity.help.l4 = Maximum length of the severity is 50 character if it is more then that, then the extra character from the right will be removed by the system. 
+
+
+feedback.predefinedsubject.help.heading = Feedback Module Help for Predefined Subject
+feedback.predefinedsubject.help.l1 = Admin can define the Subject under which users can submit the feedback.
+feedback.predefinedsubject.help.l2 = Subjects are used to provide the classification of the feedback submitted.
+feedback.predefinedsubject.help.l3 = Subject can be like patient not found , System running slow etc.
+feedback.predefinedsubject.help.l4 = Maximum length of the subject is 50 character if it is more then that, then the extra character from the right will be removed by the system. 
+
+feedback.status.help.heading = Feedback Module Help for Status
+feedback.status.help.l1 = Admin can define the Status in order to classify the feedback based on the status of the feedback submitted.
+feedback.status.help.l2 = Status can be like solved, forwarded to the mailing list, todo etc.
+feedback.status.help.l3 = Maximum length of the status is 50 character if it is more then that, then the extra character from the right will be removed by the system. 
+
