Added sine extra credit stuff.
git-svn-id: http://svn.openmrs.org/openmrs-modules/feedback/trunk@22027 5bac5841-c719-aa4e-b3fe-cce5062f897a

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -10,7 +10,7 @@ feedback.addPredefinedSubject=Add Predefined Subject
 feedback.predefinedsubjects=Predefined Subjects
 feedback.feedbackId = Ticket No
 feedback.creator = Creator
-feedback.dateCreated = Date Submitted
+feedback.dateCreated = Time of Submission
 feedback.subject = Subject
 feedback.severity = Severity Level
 feedback.feedback = Feedback Message Content
