Added some extra stuff, user email preference form.
git-svn-id: http://svn.openmrs.org/openmrs-modules/feedback/trunk@22045 5bac5841-c719-aa4e-b3fe-cce5062f897a

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -65,3 +65,7 @@ feedback.status.help.l1 = Admin can define the Status in order to classify the f
 feedback.status.help.l2 = Status can be like solved, forwarded to the mailing list, todo etc.
 feedback.status.help.l3 = Maximum length of the status is 50 character if it is more then that, then the extra character from the right will be removed by the system. 
 
+feedback.userPreference = Feedback Module User Preference
+feedback.userPreference.email = Email ID for receiving feedback notification 
+feedback.userPreference.notification.followup = Email notification for followup
+feedback.userPreference.notification.receipt = Email notification for receipt of feedback
