Some new feature.
git-svn-id: http://svn.openmrs.org/openmrs-modules/feedback/trunk@22329 5bac5841-c719-aa4e-b3fe-cce5062f897a

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -93,3 +93,5 @@ feedback.admin.properties.admin.notification.email =  Admin EMail ID for receivi
 feedback.admin.properties.admin.notification = Message for Admin notification	
 feedback.admin.properties.ui.notification = Message to show after feedback submission to user
 
+feedback.user.manageFeedback = Submitted Feedback
+
