Making code readable intended and removing useless code
git-svn-id: http://svn.openmrs.org/openmrs-modules/feedback/trunk@22471 5bac5841-c719-aa4e-b3fe-cce5062f897a

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -95,3 +95,5 @@ feedback.admin.properties.ui.notification = Message to show after feedback submi
 
 feedback.user.manageFeedback = Submitted Feedback
 
+feedback.addSortWeight = Priority
+
