https://source.openmrs.org/cru/CR-MOD-271#c5400 changes done.
git-svn-id: http://svn.openmrs.org/openmrs-modules/feedback/trunk@22581 5bac5841-c719-aa4e-b3fe-cce5062f897a

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -81,4 +81,9 @@ feedback.user.manageFeedback = Submitted Feedback
 feedback.addSortWeight = Priority
 feedback.status.change = Change Status
 feedback.forward = Forward Feedback to JIRA
+feedback.notification.status.deleted = Status Deleted Successfully 
+feedback.notification.comment.submitted = Feedback Comment Successfully Submitted
+feedback.notification.delete = Feedback Successfully Deleted
+feedback.preference.email.added = User Preferences and Email setting saved.
+feedback.preference.email.incorrect = Incorrect Email ID
 
