Doing minor changes before GSoC ends.
git-svn-id: http://svn.openmrs.org/openmrs-modules/feedback/trunk@22781 5bac5841-c719-aa4e-b3fe-cce5062f897a

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -41,40 +41,40 @@ feedback.notification.status.delete = Status Deleted Successfully
 feedback.notification.feedback.save = Feedback Submitted Successfully
 feedback.notification.feedback.error = Error while submitting Feedback, We don't accept file other then jpeg,jpg,png,gif and attached file cannot be of size > 3 MB .Please remove the error and resubmit.
 feedback.severity.help.heading = Feedback Module Help for Severity
-feedback.severity.help.l1 = The severity level indicates the seriousness of the problem.
-feedback.severity.help.l2 = You can have multiple severity level under which a user can submit a bug/feedback/report like Low , High , Normal , Generic , May be etc.
+feedback.severity.help.l1 = This is meant to indicates the seriousness of the problem.
+feedback.severity.help.l2 = Example severity level can be like bug/feedback/report like Low , High , Normal , Generic , May be etc.
 feedback.severity.help.l3 = For a single feedback a user can select only a single severity level
 feedback.severity.help.l4 = Maximum length of the severity is 50 character if it is more then that, then the extra character from the right will be removed by the system. 
 feedback.severity.help.l5 = The more the priority the more upward it will appear in the list.
 feedback.severity.help.l6 = The one with highest priority is default value for this entry incase user don't select anything.
 feedback.predefinedsubject.help.heading = Feedback Module Help for Predefined Subject
 feedback.predefinedsubject.help.l1 = Admin can define the Subject under which users can submit the feedback.
-feedback.predefinedsubject.help.l2 = Subjects are used to provide the classification of the feedback submitted.
-feedback.predefinedsubject.help.l3 = Subject can be like patient not found , System running slow etc.
+feedback.predefinedsubject.help.l2 = This is used to provide the classification of the feedback submitted.
+feedback.predefinedsubject.help.l3 = Example predefined subject can be like patient not found , System running slow etc.
 feedback.predefinedsubject.help.l4 = Maximum length of the subject is 50 character if it is more then that, then the extra character from the right will be removed by the system. 
 feedback.predefinedsubject.help.l5 = The more the priority the more upward it will appear in the list.
 feedback.predefinedsubject.help.l6 = The one with highest priority is default value for this entry incase user don't select anything.
 feedback.status.help.heading = Feedback Module Help for Status
-feedback.status.help.l1 = Admin can define the Status in order to classify the feedback based on the status of the feedback submitted.
-feedback.status.help.l2 = Status can be like solved, forwarded to the mailing list, todo etc.
+feedback.status.help.l1 = This is used in order to classify the feedback based on the status of the feedback submitted.
+feedback.status.help.l2 = Example status can be like solved, forwarded to the mailing list, todo etc.
 feedback.status.help.l3 = Maximum length of the status is 50 character if it is more then that, then the extra character from the right will be removed by the system. 
 feedback.status.help.l4 = The more the priority the more upward it will appear in the list.
 feedback.status.help.l5 = The one with highest priority is default value for this entry incase user don't select anything.
-feedback.userPreference = Feedback Module User Preference
-feedback.userPreference.email = Email ID for receiving feedback notification 
+feedback.userPreference = Feedback Module User Preferences
+feedback.userPreference.email = Email Address for receiving feedback notification 
 feedback.userPreference.notification.followup = Email notification for followup
 feedback.userPreference.notification.receipt = Email notification for receipt of feedback
 feedback.submitfeedback.help.l1 = Submit the feedback under a specific subject that you can select from the drop-down,incase you are not sure about what subject to choose then the one that is already selected is default according to your System Administrator.
 feedback.submitfeedback.help.l2 = Submit the feedback under a specific severity that you can select from the drop-down,incase you are not sure about what is the severity level of the problem then the one that is already selected is default according to your System Administrator.
 feedback.submitfeedback.help.l3 = Include any message in the feedback, so that the feedback become more clear to the administrator.If you want system to include other information then select the option for include other details.
-feedback.submitfeedback.help.l4 = Set the preference for receiving notifications from the User Preference page under the feedback module.
-feedback.user.preference = User Preference
-feedback.admin.properties = Setting
+feedback.submitfeedback.help.l4 = Set the preference for receiving notifications from the User Preferences page under the feedback module.
+feedback.user.preference = User Preferences
+feedback.admin.properties = Settings
 feedback.submitfeedback.help.heading = Feedback Module Submit Feedback Help
-feedback.admin.properties.edit = Feedback Module Admin Setting
-feedback.admin.properties.notification.email = EMail ID for sending notification
+feedback.admin.properties.edit = Feedback Module Admin Settings
+feedback.admin.properties.notification.email = Email Address for sending notification
 feedback.admin.properties.notification 	=  Message for user feedback notification
-feedback.admin.properties.admin.notification.email =  Admin EMail ID for receiving feedback updates 		
+feedback.admin.properties.admin.notification.email =  Admin Email Address for receiving feedback updates 		
 feedback.admin.properties.admin.notification = Message for Admin notification	
 feedback.admin.properties.ui.notification = Message to show after feedback submission to user
 feedback.user.manageFeedback = Submitted Feedback
@@ -84,6 +84,10 @@ feedback.forward = Forward Feedback to JIRA
 feedback.notification.status.deleted = Status Deleted Successfully 
 feedback.notification.comment.submitted = Feedback Comment Successfully Submitted
 feedback.notification.delete = Feedback Successfully Deleted
-feedback.preference.email.added = User Preferences and Email setting saved.
-feedback.preference.email.incorrect = Incorrect Email ID
-
+feedback.preference.email.added = User Preferences and Email settings saved.
+feedback.preference.email.incorrect = Incorrect Email Address
+feedback.notification.number.error = Please Enter a valid number as Priority
+feedback.sortWeight = Priority
+feedback.notification.status.saved = Feedback Status Saved
+feedback.help = Help
+feedback.priority = The more the priority the more upward it will appear in the list.
